@@ -11,12 +11,15 @@ dist_pkgdata_DATA = \
 	system_filters.xml \
 	tips.xml\
 	lds.xml\
-	main1.css\
-	main2.css\
-	main3.css\
-	main4.css\
-	main5.css\
-	main6.css
+    NWeb-Print_Default.css\
+    NWeb-Screen_Basic-Ash.css\
+    NWeb-Screen_Basic-Cypress.css\
+    NWeb-Screen_Basic-Lilac.css\
+    NWeb-Screen_Basic-Peach.css\
+    NWeb-Screen_Basic-Spruce.css\
+    NWeb-Screen_Mainz.css\
+    NWeb-Screen_Nebraska.css\
+    NWeb-Screen_Sharp.css
 
 # Rules for files with translatable strings
 # These are taken care of by the intltool
